chapter13/demoapp-ingress-with-basicauth.yaml
# Author: MageEdu <mage@magedu.com>
# Version: 0.1
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demoapp-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: ilinux-passwd
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"
    nginx.ingress.kubernetes.io/auth-url: "/configs"
  namespace: dev
spec:
  rules:
  - host: www.ilinux.io
    http:
      paths:
      - path: /
        backend:
          serviceName: demoapp
          servicePort: 80
  tls:
  - hosts:
    - www.ilinux.io
    secretName: tls-ingress-www-ilinux
