chapter13/httpproxy-tls-passthrough.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: dashboard
  namespace: kubernetes-dashboard
spec:
  virtualhost:
    fqdn: www.ilinux.io
    tls:
      passthrough: true
  tcpproxy:
    services:
    - name: kubernetes-dashboard
      port: 443
