chapter13/tomcat.yaml
# Author: MageEdu <mage@magedu.com>
# Version: v1.0
# Date: 2020-07-11
---
kind: Namespace
apiVersion: v1
metadata:
  name: testing
  labels:
    env: testing
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tomcat-deploy
  namespace: testing
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tomcat
      version: 8.5
      jdk: openjdk
  template:
    metadata:
      labels:
        app: tomcat
	version: 8.5
	jdk: openjdk
    spec:
      containers:
      - name: tomcat
        image: tomcat:8.5.57-jdk8-adoptopenjdk-openj9
        ports:
        - containerPort: 8080
          name: httpport
        - containerPort: 8009
          name: ajpport
---
apiVersion: v1
kind: Service
metadata:
  name: tomcat
  namespace: testing
spec:
  selector:
    app: tomcat
    version: 8.5
    jdk: openjdk
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tomcat
  namespace: testing
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: tomcat.ilinux.io
    http:
      paths:
      - path: 
        backend:
          serviceName: tomcat
          servicePort: 80
---
